tests/parser/assignment/invalid_01.m.out
In invalid_01.m, line 2
|   [x; y] = size(1);
|     ^ error: expected IDENTIFIER, found SEMICOLON instead
MISS_HIT Debug Summary: 1 file(s) analysed, 1 error(s)
